<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_dark"

        />

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center"
        android:focusableInTouchMode="false"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personSelection"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@drawable/shadow_btn"
            android:gravity="center"
            android:id="@+id/linear_btn_persons"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/btn_linear_left_image"
                android:src="@drawable/arrow_down_gray"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_weight="8"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:id="@+id/text_add_card_selectedPersonName"
                />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:id="@+id/image_add_card_selectedPersonLogo"
                />

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bankSelection"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@drawable/shadow_btn"
            android:gravity="center"
            android:id="@+id/linear_btn_banks"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/arrow_down_gray"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:id="@+id/text_add_card_selectedBankName"
                />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"

                android:layout_weight="1"
                android:id="@+id/image_add_card_selectedBankLogo"
                />

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cardNumber"
            android:layout_marginTop="25dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:inputType="number"
                android:maxLength="4"
                android:id="@+id/edit_add_card_cardNumber1"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:inputType="number"
                android:maxLength="4"
                android:id="@+id/edit_add_card_cardNumber2"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:inputType="number"
                android:maxLength="4"
                android:id="@+id/edit_add_card_cardNumber3"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:inputType="number"
                android:maxLength="4"
                android:id="@+id/edit_add_card_cardNumber4"
                />
        </LinearLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expDate"
            android:layout_marginTop="25dp"

            />
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="2"
            android:id="@+id/edit_add_card_expDate_year"
            android:hint="@string/year"
            android:gravity="center"
            />
        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="2"
            android:id="@+id/edit_add_card_expDate_mounth"
            android:hint="@string/mounth"
            android:gravity="center"
            />

    </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginTop="15dp"
            >

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="cvv2"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="4"
                android:id="@+id/edit_add_card_cvv2"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginTop="15dp"
            >
            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/account_number"
                android:gravity="center"
                android:inputType="number"
                android:id="@+id/edit_add_card_accountNumber"
                />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accountTransactionEnable"
            android:layout_marginTop="15dp"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold"
            android:id="@+id/check_add_card_transactionsActive"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shadow_btn"
            android:layout_marginTop="25dp"
            android:id="@+id/text_btn_add_card"
            android:text="@string/add"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            />


    </LinearLayout>

</ScrollView>
</LinearLayout>