<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    >

    <include layout="@layout/card_view_card2"
        android:id="@+id/layout_transaction_cardView"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/transaction_list"
            android:textSize="25sp"
            android:gravity="center"
            android:id="@+id/textButton_transactionList"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/debit2"
            android:textSize="25sp"
            android:gravity="center"
            android:id="@+id/textButton_debit"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/credit2"
            android:textSize="25sp"
            android:gravity="center"
            android:id="@+id/textButton_credit"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:id="@+id/textButton_transactionList_underLineColor"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:id="@+id/textButton_debit_underLineColor"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:id="@+id/textButton_credit_underLineColor"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/frame_transaction_contents"
                >

            </FrameLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>
